--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -18,12 +18,6 @@ section{
     padding-top:30px;
 }
 
-
-#aside{
-    margin-bottom: 2rem;
-    border-radius: .3rem; 
-}
-
 #main{
   
 }
@@ -31,7 +25,8 @@ section{
 #foot{
         margin-left: 1rem;
         margin-right: 1rem;
-        margin-top: 1rem;
+        margin-bottom: 1rem;
+        padding-top: 1rem;
         background-color: #e9ecef;
         border-radius: .3rem;
        
@@ -43,4 +38,9 @@ section{
 
 img{
     border-radius: .3rem;
+}
+
+#ajoutCommentaire
+{
+    margin-top : 4rem;
 }
